<resources>
    <string name="app_name">new_app</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create new account</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="or">or</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_fullname">Enter your fullname</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="jalur_pendakian">Jalur Pendakian</string>
    <string name="informasi_gunung">Informasi Gunung</string>
    <string name="where_do_you_want_to_go">Where do you want to go?</string>
    <string name="recommended_place">Recommended Place</string>
    <string name="daftar_gunung">Daftar Gunung</string>
    <string name="choose_your_categories">Choose your categories</string>
    <string name="todo">TODO</string>
    <string name="do_s_and_don_ts">Do\'s and Don\'ts</string>
    <string name="to_do">TODO</string>
    <string name="tools">tools</string>
    <string name="get_weather">get weather</string>
    <string name="select_location">select location</string>
    <string name="temperature_placeholder">temperature placeholder</string>
    <string name="description_placeholder">description placeholder</string>
    <string name="error_message">pesan error</string>
    <string name="forecast_weather">forecast weather</string>
    <string name="forecast_time">forecast time</string>
    <string name="temperature">Temperature</string>
    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="moderate">Moderate</string>
    <string name="poor">Poor</string>
    <string name="very_poor">Very Poor</string>
    <string name="sunrise">sunrise</string>
    <string name="max_temp">Max temp</string>
    <string name="feels_like">Feels like</string>
    <string name="min_temp">Min temp</string>
    <string name="air_quality">Air Quality</string>
    <string name="perfect">perfect</string>
    <string name="five_days_forecast">Five Days Forecast</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="location">Location</string>
    <string name="updated_at">updated at</string>
    <string name="_24_c">24°C</string>
    <string name="pressure">Pressure</string>
    <string name="sunset">Sunset</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="api_key">92e97c4e2c7a2e9fc6d738b3eb7b9ddb</string>
</resources>