<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".ui.weather">

    <Spinner
        android:id="@+id/spinnerLocations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:entries="@array/location_array"
        android:minHeight="48dp"
        android:prompt="@string/select_location" />

    <Button
        android:id="@+id/buttonGetWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_weather"
        android:layout_below="@id/spinnerLocations"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/textViewTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_placeholder"
        android:layout_below="@id/buttonGetWeather"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_placeholder"
        android:layout_below="@id/textViewTemperature"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        />
</RelativeLayout>