<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".ui.login">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Log In"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/envelope"
        android:drawablePadding="12dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/enter_your_email"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints=""
        tools:ignore="TextFields,VisualLintTextFieldSize" />


    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="55dp"
        android:inputType="textPassword"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/lock"
        android:drawableEnd="@drawable/eye"
        android:drawablePadding="12dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/enter_your_password"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="55dp"
        android:backgroundTint="#16DD4F"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/sign_in"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="200dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/or"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="55dp"
        android:backgroundTint="#16DD4F"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/create_new_account"
        android:onClick="kesignup"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.555" />


</androidx.constraintlayout.widget.ConstraintLayout>